@@ -1,5 +1,6 @@
 Adminer dev:
 Speed up with disabled output buffering
+Don't autofocus computed fields in insert form
 PostgreSQL: Do not alter indexes with expressions
 PostgreSQL: Fix export of indexes with expressions (bug #768)
 PostgreSQL: Display ENUM types
